Launch app in terminal when Terminal=true

When the desktop file has Terminal=true (e.g. htop), it should be
launched in a terminal.

Instead of calling "kstart5 -- <exec path>", this calls
"kstart5 --application <desktop file name>" when and only when:
1. kstart5 is available
2. the desktop file is in XDG_DATA_HOME/applications/,
not XDG_DATA_HOME/kglobalaccel/
3. we are launching the desktop file's main group, not other actions

BUG: 455117